@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.422 2019/07/31 13:28:23 brook Exp $
+# $NetBSD: Makefile,v 1.423 2019/07/31 13:30:20 brook Exp $
 
 COMMENT=	Mathematics
 
@@ -95,6 +95,7 @@ SUBDIR+=	R-spacetime
 SUBDIR+=	R-splancs
 SUBDIR+=	R-stabledist
 SUBDIR+=	R-statmod
+SUBDIR+=	R-survey
 SUBDIR+=	R-tibble
 SUBDIR+=	R-wle
 SUBDIR+=	R-xtable
