@@ -1,0 +1,7 @@
+Summary statistics, two-sample tests, rank tests, generalised linear
+models, cumulative link models, Cox models, loglinear models, and
+general maximum pseudolikelihood estimation for multistage stratified,
+cluster-sampled, unequally weighted survey samples. Variances by
+Taylor series linearisation or replicate weights. Post-stratification,
+calibration, and raking. Two-phase subsampling designs. Graphics. PPS
+sampling without replacement. Principal components, factor analysis.
